--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "ts-node src/Tarea",
+    "start": "ts-node src/",
     "build": "tsc"
   },
   "keywords": [],
